<resources>
    <string name="app_name">TinyEnglish</string>
    <string name="register">Đăng kí</string>
    <string name="login">Đăng nhập</string>
    <string name="back_home">Quay lại</string>
    <string name="username">Tên tài khoản</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="home_intro">TinyEnglish giúp các bé làm quen với tiếng Anh thông qua bài học ngắn, từ vựng đơn giản và giao diện thân thiện.</string>
    <string name="home_screen_title">Trang chủ TinyEnglish</string>
    <string name="lessons_title">Danh sách bài học</string>
    <string name="vocabulary_title">Danh sách từ vựng</string>
    <string name="profile_title">Tài khoản của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="app_section_title">Màn hình chính</string>
    <string name="logged_in_message">Bạn đã đăng nhập thành công.</string>
    <string name="logged_out_message">Hãy đăng kí hoặc đăng nhập để bắt đầu.</string>
    <string name="login_title">Đăng nhập</string>
    <string name="register_title">Đăng kí tài khoản</string>
    <string name="nav_home">Home</string>
    <string name="nav_lessons">Lessons</string>
    <string name="nav_vocabulary">Words</string>
    <string name="nav_profile">Profile</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="register_success">Đăng kí thành công</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="register_failed">Đăng kí thất bại</string>
    <string name="error_username_required">Vui lòng nhập tên tài khoản</string>
    <string name="error_username_invalid">Tên tài khoản chỉ gồm chữ, số và dấu gạch dưới</string>
    <string name="error_username_taken">Tên tài khoản đã tồn tại</string>
    <string name="error_username_not_found">Sai tên tài khoản</string>
    <string name="error_email_invalid">Email không hợp lệ</string>
    <string name="error_email_taken">Email đã được sử dụng</string>
    <string name="error_password_required">Vui lòng nhập mật khẩu</string>
    <string name="error_password_short">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="error_password_mismatch">Mật khẩu nhập lại không khớp</string>
    <string name="error_wrong_password">Sai mật khẩu</string>
    <string name="profile_not_available">Chưa tải được thông tin tài khoản</string>
    <string name="profile_username_format">Tên tài khoản: %1$s</string>
    <string name="profile_email_format">Email: %1$s</string>
    <string name="profile_section_info">👧 Thông tin của bé</string>
    <string name="profile_gender_label">Giới tính</string>
    <string name="profile_age_label">Tuổi</string>
    <string name="profile_birth_label">Ngày sinh (dd/MM/yyyy)</string>
    <string name="profile_birth_error">Ngày sinh không hợp lệ</string>
    <string name="profile_save">Lưu thông tin</string>
    <string name="profile_avatar_hint">Chạm để đổi ảnh</string>
    <string name="profile_age_error">Tuổi phải là số dương</string>
    <string name="profile_save_success">Đã lưu thông tin</string>
    <string name="profile_save_failed">Không thể lưu thông tin</string>
    <string-array name="profile_gender_options">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>
</resources>
